--- a/src/app/info/info.component.scss
+++ b/src/app/info/info.component.scss
@@ -40,13 +40,22 @@
     .dot {
       width: 10px;
       height: 10px;
-      margin-right: 16px;
+      margin: 0 8px;
     }
   }
 
   &.green {
     color: white;
     background-color: $green1;
+  }
+
+  @media only screen and (max-device-width: 670px) {
+    height: 80px;
+    padding: 0;
+    .text {
+      font-size: 60px;
+      margin: 0 5px;
+    }
   }
 }
 
@@ -138,9 +147,12 @@
 }
 
 .containerRSVP {
+  overflow: hidden;
   width: 100%;
   display: flex;
-  height: 700px;
+  flex-wrap: wrap;
+  justify-content: center;
+  min-height: 700px;
   padding: 0 50px;
   margin-bottom: 50px;
   &.green {
@@ -148,23 +160,22 @@
   }
 
   .left {
-    width: 50%;
+    width: 600px;
     height: 100%;
-    display: flex;
+    display: inline-flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     padding: 20px;
     overflow: hidden;
-
   }
-  .first{
+  .first {
     padding-top: 70px;
   }
   .right {
-    width: 50%;
+    width: 600px;
     height: 100%;
-    display: flex;
+    display: inline-flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
@@ -192,10 +203,19 @@
     font-size: 18px;
     line-height: 150%;
     &.bold {
-      font-family: avenir-bold;;
+      font-family: avenir-bold;
+      margin-bottom: 20px;
+    }
+    @media only screen and (max-device-width: 670px) {
+      text-align: center;
     }
   }
 
+  .titolettoCont {
+    @media only screen and (max-device-width: 670px) {
+      text-align: center;
+    }
+  }
   .titoletto {
     font-family: avenir-regular;
     font-weight: 700;
@@ -205,6 +225,9 @@
       font-family: avenir-bold;
       font-size: 30px;
     }
+  }
+  @media only screen and (max-device-width: 670px) {
+    padding: 0;
   }
 }
 
