--- a/src/app/grazie/grazie.component.scss
+++ b/src/app/grazie/grazie.component.scss
@@ -68,7 +68,7 @@
     position: absolute;
     transform: translateX(0);
     opacity: 0;
-    transition: all 1s;
+    transition: opacity 0.5s ease-in-out, visibility 1s;
     visibility: hidden;
   }
 
@@ -76,6 +76,7 @@
     position: relative;
     transform: translateX(0);
     visibility: visible;
+    transition: opacity 0.5s ease-in-out, visibility 1s;
     opacity: 1;
   }
 }
