cambiato il testo della pagina grazie

--- a/src/app/grazie/grazie.component.html
+++ b/src/app/grazie/grazie.component.html
@@ -58,15 +58,14 @@
       <span class="dot"></span>
       <span class="dot"></span>
       <span class="dot"></span>
-    </div>
+    </div><br>
     <span>
       «Occorre solo che abbiamo a camminare
-      insieme, seguendo il Mistero che fa tutto»</span><br>
-    <span>
-      Luigi Giussani</span><br><br>
-    <span>
-      Nell’aderire con gioia alla nostra vocazione, abbiamo a mente il volto amico di ciascuno di voi e ne siamo
-      immensamente grati.<br>
+      insieme, seguendo il Mistero che fa tutto»</span><br><br>
+    <span class="aDestra">
+      - Luigi Giussani</span><br><br>
+    <span style="font-size: 26px;">
+      Siamo grati del volto amico di ciascuno di voi.<br>
       Ci auguriamo di vedervi tutti per festeggiare insieme!</span><br>
     <p class="fs70 green1 mb10">Simo e Leti</p>
   </div>
