--- a/src/app/grazie/grazie.component.scss
+++ b/src/app/grazie/grazie.component.scss
@@ -47,6 +47,10 @@
     .fs70 {
       margin-top: 20px !important;
     }
+    .aDestra {
+      position: absolute;
+      right: 70px;
+    }
   }
 
   .photoContainer {
