--- a/src/app/grazie/grazie.component.html
+++ b/src/app/grazie/grazie.component.html
@@ -61,12 +61,12 @@
     </div><br>
     <span>
       «Occorre solo che abbiamo a camminare
-      insieme, seguendo il Mistero che fa tutto»</span><br><br>
+      insieme, seguendo il Mistero che fa tutto»</span><br>
     <span class="aDestra">
       - Luigi Giussani</span><br><br>
     <span style="font-size: 26px;">
       Siamo grati del volto amico di ciascuno di voi.<br>
-      Ci auguriamo di vedervi tutti per festeggiare insieme!</span><br>
+      Ci auguriamo di vedervi tutti il più presto possibile per festeggiare insieme!</span><br><br>
     <p class="fs70 green1 mb10">Simo e Leti</p>
   </div>
 
