--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -114,6 +114,10 @@
     height: 80%;
     width: auto;
   }
+  @media only screen and (max-device-width: 640px) {
+    padding-top: 0px;
+  }
+
 }
 
 .container4Home {
