--- a/src/app/responsive-toolbar/responsive-toolbar.component.html
+++ b/src/app/responsive-toolbar/responsive-toolbar.component.html
@@ -6,7 +6,7 @@
       <button mat-button [routerLink]="'/'">Home</button>
       <button mat-button [routerLink]="'/info'">Info & RSVP</button>
       <button mat-button [routerLink]="'/listanozze'">Lista Nozze </button>
-      <button mat-button [routerLink]="'/grazie'">Grazie</button>
+      <button mat-button [routerLink]="'/grazie'">Grazie!</button>
     </div>
 
   </mat-toolbar-row>
@@ -50,7 +50,7 @@
     <button mat-button [routerLink]="'/'">Home</button>
     <button mat-button [routerLink]="'/info'">Info & RSVP</button>
     <button mat-button [routerLink]="'/listanozze'">Lista Nozze </button>
-    <button mat-button [routerLink]="'/grazie'">Grazie</button>
+    <button mat-button [routerLink]="'/grazie'">Grazie!</button>
   </div>
 </div>
 
