--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <app-responsive-toolbar></app-responsive-toolbar>
 <div class="container1Home">
-  <img alt="immagine in montagna" src="../../assets/images/home.jpg" class="backgroundHome" />
+  <img alt="immagine in montagna" src="../../assets/images/home_prova.jpg" class="backgroundHome" />
 </div>
 <div class="rettVerde">
   <div class="contBianco">
