aggiunta scomparsa puntini in coming soon della lista nozze

--- a/src/app/lista-nozze/lista-nozze.component.html
+++ b/src/app/lista-nozze/lista-nozze.component.html
@@ -1,25 +1,25 @@
 <app-responsive-toolbar></app-responsive-toolbar>
 <div class="titolo">
-  <div class="separatore green2">
+  <div class="separatore green2" fxHide.xs>
     <span class="dot"></span>
     <span class="dot"></span>
     <span class="dot"></span>
-    <span class="dot"></span>
-    <span class="dot"></span>
-    <span class="dot"></span>
-    <span class="dot"></span>
-    <span class="dot"></span>
+    <span class="dot" fxHide.sm></span>
+    <span class="dot" fxHide.sm></span>
+    <span class="dot" fxHide.sm></span>
+    <span class="dot" fxHide.sm></span>
+    <span class="dot" fxHide.sm></span>
   </div>
   <span class="text">Coming soon!</span>
-  <div class="separatore green2">
+  <div class="separatore green2" fxHide.xs>
     <span class="dot"></span>
     <span class="dot"></span>
     <span class="dot"></span>
-    <span class="dot"></span>
-    <span class="dot"></span>
-    <span class="dot"></span>
-    <span class="dot"></span>
-    <span class="dot"></span>
+    <span class="dot" fxHide.sm></span>
+    <span class="dot" fxHide.sm></span>
+    <span class="dot" fxHide.sm></span>
+    <span class="dot" fxHide.sm></span>
+    <span class="dot" fxHide.sm></span>
   </div>
 </div>
 <!--<div>
