--- a/src/app/responsive-toolbar/responsive-toolbar.component.html
+++ b/src/app/responsive-toolbar/responsive-toolbar.component.html
@@ -30,8 +30,8 @@
     [routerLink]="'/'">Simo e Leti</p> -->
 
   <div class="mobileBar" fxHide fxShow.xs>
-    <div class="padded">
-      <a id="openNav">
+    <div class="padded" id="openNav">
+      <a>
         <!-- <i class="fas fa-bars"></i> -->
         <mat-icon style="color: white">menu</mat-icon>
       </a>
