--- a/src/app/info/info.component.html
+++ b/src/app/info/info.component.html
@@ -1,4 +1,3 @@
-<app-responsive-toolbar></app-responsive-toolbar>
 <div class="titolo">
   <div class="separatore green2" fxHide.xs>
     <span class="dot"></span>
@@ -85,7 +84,8 @@
     </div>
 
     <span class="descrizione" style="padding-top: 10px; padding-bottom: 10px;">
-      Non sappiamo ancora come e se potremo fare la festa.<br>Vi terremo aggiornati su eventuali sviluppi nelle prossime settimane!
+      Non sappiamo ancora come e se potremo fare la festa.<br>Vi terremo aggiornati su eventuali sviluppi nelle prossime
+      settimane!
     </span>
 
     <div class="mappa">
