--- a/src/app/lista-nozze/lista-nozze.component.scss
+++ b/src/app/lista-nozze/lista-nozze.component.scss
@@ -9,7 +9,7 @@
   opacity: 0.7;
 }
 
-.container:hover{
+.container:hover {
   opacity: 0.5;
 }
 
@@ -34,16 +34,15 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 0 10%;
+  padding: 0;
   .text {
     font-family: honey; /*avenir-regular*/
     font-size: 80px; /*40px*/
     line-height: 150%;
-    margin: 0 30px;
-    @media only screen and (max-device-width: 640px){
+    margin: 0;
+    @media only screen and (max-device-width: 640px) {
       font-size: 60px;
     }
-
   }
   .separatore {
     display: flex;
@@ -51,7 +50,7 @@
     .dot {
       width: 10px;
       height: 10px;
-      margin-right: 16px;
+      margin: 0 8px;
     }
   }
 
