aggiornate foto e scritta grazie, anche bottone rimando a grazie e scritta lì tolta

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -74,7 +74,7 @@
 
 <div class="container4Home">
   <div class="photoContainerHome">
-    <ngb-carousel *ngIf="Images" [showNavigationArrows]="false" [showNavigationIndicators]="false">
+    <ngb-carousel *ngIf="Images.length != 0" [showNavigationArrows]="false" [showNavigationIndicators]="false">
       <ng-template ngbSlide *ngFor="let image of Images">
         <div class="picsum-img-wrapper">
           <img [src]="image" alt="Random slide" class="myImg">
@@ -84,7 +84,7 @@
   </div>
 
   <div class="boxScritta flex column">
-    <div class="separatore green2">
+    <!--<div class="separatore green2">
       <span class="dot"></span>
       <span class="dot"></span>
       <span class="dot"></span>
@@ -93,9 +93,9 @@
       <span class="dot"></span>
       <span class="dot"></span>
       <span class="dot"></span>
-    </div>
-    <span class="fs30 center">«Occorre solo che abbiamo a camminare insieme, seguendo il Mistero che fa tutto»</span>
-    <a [routerLink]="'/grazie'" fragment="top" class="button" style="font-size: 16px">Per ringraziarvi...</a>
+    </div>-->
+    <!--<span class="fs30 center">«Occorre solo che abbiamo a camminare insieme, seguendo il Mistero che fa tutto»</span>-->
+    <a [routerLink]="'/grazie'" fragment="top" class="button" style="font-size: 16px">Un grande grazie!</a>
   </div>
 </div>
 
