--- a/src/app/grazie/grazie.component.html
+++ b/src/app/grazie/grazie.component.html
@@ -57,15 +57,17 @@
       <span class="dot"></span>
       <span class="dot"></span>
       <span class="dot"></span>
-    </div><br>
+    </div><br><!--
     <span>
       «Occorre solo che abbiamo a camminare
       insieme, seguendo il Mistero che fa tutto»</span><br>
     <span class="aDestra">
-      - Luigi Giussani</span><br><br>
+      - Luigi Giussani</span><br><br>--><br>
     <span style="font-size: 26px;">
-      Siamo grati del volto amico di ciascuno di voi.<br>
-      Ci auguriamo di vedervi tutti il più presto possibile per festeggiare insieme!</span><br><br>
+      Seguendo con gioia la nostra strada, siamo immensamente grati del volto amico di ciascuno di voi in questi anni.
+      Ci auguriamo di vedervi tutti il più presto possibile per brindare e festeggiare insieme a voi!</span><br><br><br>
+      <!--Siamo grati del volto amico di ciascuno di voi.<br>
+      Ci auguriamo di vedervi tutti il più presto possibile per festeggiare insieme!</span><br><br>-->
     <p class="fs70 green1 mb10">Simo e Leti</p>
   </div>
 
@@ -83,14 +85,15 @@
       <span class="dot"></span>
       <span class="dot"></span>
     </div><br>
-    <span>
+    <!--<span>
       «Occorre solo che abbiamo a camminare
       insieme, seguendo il Mistero che fa tutto»</span><br>
     <span class="aDestra">
-      - Luigi Giussani</span><br><br>
+      - Luigi Giussani</span><br><br>-->
     <span style="font-size: 26px;">
-      Siamo grati del volto amico di ciascuno di voi.<br>
-      Ci auguriamo di vedervi tutti per festeggiare insieme!</span><br>
+      Seguendo con gioia la nostra strada, siamo immensamente grati del volto amico di ciascuno di voi in questi anni.
+      Ci auguriamo di vedervi tutti il più presto possibile per brindare e festeggiare insieme a voi!
+    </span><br>
     <p class="fs70 green1 mb10">Simo e Leti</p>
   </div>
   <div>
