--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -149,7 +149,7 @@
     background-color: $green1;
     border: 5px solid $green1;
     overflow: hidden;
-    opacity: 0.3;
+    opacity: 0.7;
 
     @media only screen and (max-device-width: 640px) {
       height: 100%;
@@ -309,6 +309,7 @@
   .subTitle {
     font-size: 18px;
     line-height: 24px;
+    text-align: center;
     // font-weight: bold;
     font-family: avenir-regular;
   }
