update_pagina_lista_nozze

--- a/src/app/lista-nozze/lista-nozze.component.html
+++ b/src/app/lista-nozze/lista-nozze.component.html
@@ -10,7 +10,7 @@
     <span class="dot"></span>
     <span class="dot"></span>
   </div>
-  <span class="text">Coming soon!</span>
+  <span class="text">Lista Nozze</span>
   <div class="separatore green2">
     <span class="dot"></span>
     <span class="dot"></span>
@@ -22,23 +22,318 @@
     <span class="dot"></span>
   </div>
 </div>
+
+
 <!--<div>
   <button [routerLink]="'/listanozze/lista'">Lista</button>
 </div>
 <div>
   <button [routerLink]="'/listanozze/viaggio'">Viaggio</button>
-</div>
+</div> -->
+<!--<div class="grid-container">
+  <div class="grid-item"><div class="containerOne" style="alignment: left" [routerLink]="'/listanozze/lista'">
+    <img src="/assets/images/lista_nozze_verticale.png" alt="Norway">
+    <div class="text-block">
+      <h4>Lista Nozze</h4>
+    </div>
+  </div></div>
+  <div class="grid-item">2</div>
+  <div class="grid-item">3</div>
+  <div class="grid-item"><div class="containerOne" style="alignment: right" [routerLink]="'/listanozze/viaggio'">
+    <img src="/assets/images/maldive_verticale.png" alt="Norway">
+    <div class="text-block">
+      <h4>Viaggio di Nozze</h4>
+    </div>
+  </div></div>
 
-<div class="container" style="alignment: left" [routerLink]="'/listanozze/lista'">
-  <img src="/assets/images/lista_nozze_verticale.png" alt="Norway">
-  <div class="text-block">
-    <h4>Lista Nozze</h4>
-  </div>
-</div>
-
-<div class="container" style="alignment: right" [routerLink]="'/listanozze/viaggio'">
-  <img src="/assets/images/maldive_verticale.png" alt="Norway">
-  <div class="text-block">
-    <h4>Viaggio di Nozze</h4>
-  </div>
 </div>-->
+
+<div class="child-page-listing">
+
+
+
+  <div class="grid-container">
+
+    <article id="3685" class="location-listing">
+
+     <a class="location-title" >
+         140 €    </a>
+
+      <div class="location-image">
+      <!--  <img src="assets/images/stendino.jpeg" >-->
+              <img  src="assets/images/lista/stendino.jpg" class="immagine" alt="Stendino">
+
+
+      </div>
+
+    </article>
+
+    <article id="3688" class="location-listing">
+
+      <a class="location-title" >
+        160 €     </a>
+
+      <div class="location-image">
+        <a >
+          <img  src="assets/images/lista/microonde.jpg" alt="microonde">  </a>
+
+      </div>
+
+    </article>
+
+    <article id="3691" class="location-listing">
+
+      <a class="location-title" >
+        180 €            </a>
+
+      <div class="location-image">
+        <a >
+          <img  src="assets/images/lista/valigia.jpg" alt="valigia">  </a>
+
+      </div>
+
+    </article>
+
+    <article id="3694" class="location-listing">
+
+      <a class="location-title" >
+        60 €            </a>
+
+      <div class="location-image">
+        <a >
+          <img  src="assets/images/lista/moka.jpg" alt="moka">  </a>
+
+      </div>
+
+    </article>
+
+    <article id="3697" class="location-listing">
+
+      <a class="location-title" >
+        25 €          </a>
+
+      <div class="location-image">
+        <a >
+          <img  src="assets/images/lista/bilancia.png" alt="bilancia">    </a>
+
+      </div>
+
+    </article>
+
+    <article id="3700" class="location-listing">
+
+      <a class="location-title" >
+        350 €           </a>
+
+      <div class="location-image">
+        <a >
+          <img  src="assets/images/lista/piatti.png" alt="piatti">
+        </a>
+      </div>
+
+    </article>
+    <article id="3701" class="location-listing">
+
+      <a class="location-title" >
+        350 €           </a>
+
+      <div class="location-image">
+        <a >
+          <img src="assets/images/lista/pentole.png" alt="pentole">
+        </a>
+      </div>
+
+    </article>
+
+    <article id="3702" class="location-listing">
+
+      <a class="location-title" >
+        50 €           </a>
+
+      <div class="location-image">
+        <a >
+          <img  src="assets/images/lista/mestoli.jpg" alt="mestoli">
+        </a>
+      </div>
+
+    </article>
+    <article id="3703" class="location-listing">
+
+      <a class="location-title" >
+        130 €            </a>
+
+      <div class="location-image">
+        <a >
+          <img src="assets/images/lista/primer.jpg" alt="primer">
+        </a>
+      </div>
+
+    </article>
+    <article id="3704" class="location-listing">
+
+      <a class="location-title" >
+        360 €           </a>
+
+      <div class="location-image">
+        <a >
+          <img  src="assets/images/lista/consolle%20tavolo.jpg" alt="console">
+        </a>
+      </div>
+
+    </article>
+    <article id="3705" class="location-listing">
+
+      <a class="location-title" >
+        100 €           </a>
+
+      <div class="location-image">
+        <a >
+          <img  src="assets/images/lista/aspirapolvere.jpeg" alt="aspirapolvere">
+        </a>
+      </div>
+
+    </article>
+    <article id="3706" class="location-listing">
+
+      <a class="location-title" >
+        1500 €           </a>
+
+      <div class="location-image">
+        <a >
+          <img  src="assets/images/lista/divano.jpg" alt="divano">
+        </a>
+      </div>
+
+    </article>
+    <article id="3707" class="location-listing">
+
+      <a class="location-title" >
+        80 €          </a>
+
+      <div class="location-image">
+        <a >
+          <img  src="assets/images/lista/giardino.jpg" alt="giardino">
+        </a>
+      </div>
+
+    </article>
+    <article id="3708" class="location-listing">
+
+      <a class="location-title" >
+        50 €           </a>
+
+      <div class="location-image">
+        <a >
+          <img  src="assets/images/lista/calici.jpg" alt="calici">
+        </a>
+      </div>
+
+    </article>
+    <article id="3709" class="location-listing">
+
+      <a class="location-title" >
+        80 €            </a>
+
+      <div class="location-image">
+        <a >
+          <img  src="assets/images/lista/tovaglia.jpg" alt="tovaglia">
+        </a>
+      </div>
+
+    </article>
+
+  </div>
+  <!-- end grid container -->
+
+  <div class="container">
+
+  </div>
+  <div class="container2">
+
+
+  <div class="titoloBis">
+    <div class="separatore green2">
+      <span class="dot"></span>
+      <span class="dot"></span>
+      <span class="dot"></span>
+      <span class="dot"></span>
+      <span class="dot"></span>
+      <span class="dot"></span>
+      <span class="dot"></span>
+      <span class="dot"></span>
+    </div>
+    <span class="textBis">Viaggio</span>
+    <div class="separatore green2">
+      <span class="dot"></span>
+      <span class="dot"></span>
+      <span class="dot"></span>
+      <span class="dot"></span>
+      <span class="dot"></span>
+      <span class="dot"></span>
+      <span class="dot"></span>
+      <span class="dot"></span>
+    </div>
+
+  </div>
+    <div class="container2">
+
+    <p class="t2" style="float: left">A quanto pare il Nicaragua dovrà aspettarci ancora un po’.. Nel frattempo ci piacerebbe andare per qualche giorno a caccia della migliore insalata d’Italia!</p>
+    <div class="imageBis" >
+      <img class="imageBis" src="assets/images/lista/letiSimo.jpg">
+    </div>
+
+    </div>
+
+
+
+
+</div>
+
+    <div class="container">
+
+    <div class="titoloCon">
+      <div class="separatore green2">
+        <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+      </div>
+      <span class="text">Come Contribuire? </span>
+      <div class="separatore green2">
+        <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+      </div>
+    </div>
+    </div>
+<div class="container">
+  <div class="text-block">
+    <h4>Eccoci finalmente con una mini lista nozze!
+      In questo periodo anche girare per negozi è diventato un pochino complesso.
+      Tuttavia se avete piacere di contribuire alla costruzione della nostra nuova casa o a qualche giorno di riposo dopo il matrimonio, potete farlo mandandoci un bonifico. Ricordatevi di indicarci come causale il viaggio o l’articolo della lista che preferite a cui vorreste contribuire, in modo da potervi ringraziare ancora di più!
+    </h4>
+    <h2>
+      Intestatario: Simone Clot
+
+    </h2>
+    <h2>
+
+      IBAN: IT20D0320502 000000000 502695
+
+    </h2>
+    <h1>
+      Un grazie di cuore!
+    </h1>
+  </div>
+</div>
+</div>
+
+
+
+<div class="container" >
+  <img src="assets/images/regali.jpeg" class="image">
+  <div class="button button2">
+    <span onclick="window.location.href='https://forms.gle/qv5AMzXChjLCSce56';"> Per lasciarci un messaggio!</span>
+
+  </div>
+</div>
+
