--- a/src/app/lista-nozze/lista-nozze.component.scss
+++ b/src/app/lista-nozze/lista-nozze.component.scss
@@ -2,25 +2,159 @@
 
 .container {
   position: relative;
-  width: 200px;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+
+}
+.container2 {
+  position: relative;
+  width: auto;
+  height: auto;
+  object-fit: cover;
+  cursor: pointer;
+  background: #255d40;
+  opacity: 0.7;
+}
+body {
+  padding: 20px;
+  font-family: sans-serif;
+  background: #f2f2f2;
+}
+img {
+  width: 100%;
+  height: 400px;
+  object-fit: cover;
+}
+h2 {
+  margin-bottom: .5em;
+}
+.grid-container {
+  display: grid;
+  grid-template-columns:repeat(3, minmax(400px, 1fr));
+  grid-gap: 3em;
+  padding-left: 3rem;
+  padding-right: 3rem;
+  padding-bottom: 3%;
+
+}
+
+
+/* hover styles */
+.location-listing {
+  position: relative;
+  width: 100%;
+  height: 400px;
+}
+
+.location-image {
+  line-height: 0;
+  overflow: hidden;
+}
+
+.location-image img {
+  filter: blur(0px);
+  transition: filter 0.3s ease-in;
+  transform: scale(1.1);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.location-title {
+  font-size: 1.5em;
+  font-weight: bold;
+  text-decoration: none;
+  z-index: 1;
+  position: absolute;
+  height: 30%;
+  width: 100%;
+  top: 280px;
+  left: 0;
+  opacity: 0;
+  transition: opacity .2s;
+  background: rgba(103,140,115,0.64);
+  color: white;
+
+  /* position the text in t’ middle*/
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.location-listing:hover .location-title {
+  opacity: 1;
+
+}
+
+.location-listing:hover .location-image img {
+  filter: blur(2px);
+
+}
+
+
+
+/* for touch screen devices */
+@media (hover: none ) {
+  .location-title {
+    opacity: 1;
+  }
+  .location-image img {
+    filter: blur(2px);
+  }
+}
+
+
+
+.containerOne {
+  position: relative;
+  width: 100%;
   height: 200px;
   object-fit: cover;
   cursor: pointer;
   opacity: 0.7;
+  grid-template-columns: 100px 50px 100px;
+  grid-template-rows: 80px auto 80px;
+  column-gap: 10px;
+  row-gap: 15px;
+
 }
 
-.container:hover{
-  opacity: 0.5;
-}
+
 
 .text-block {
-  position: absolute;
-  bottom: 20px;
-  right: 20px;
-  background-color: #d1c8b2;
-  color: white;
+  position: relative;
+  /* bottom: 20px; */
+  /* right: 20px; */
+  /* background-color: #d1c8b2; */
+  color: #07100b;
   padding-left: 20px;
   padding-right: 20px;
+  padding-bottom: 3%;
+  font-size: large;
+  .h3{
+    font-size: 25px;
+    font-family: avenir-bold;
+    color: #07100b;
+    text-align: center;
+
+  }
+  .h1{
+    font-size: 20px;
+    font-family: avenir-bold;
+    color: #255d40;
+    text-align: center;
+
+  }
+  .h2{
+    font-size: 20px;
+    font-family: avenir-bold;
+    color: #07100b;
+    text-align: center;
+
+  }
+
+
 }
 
 .text-block:hover {
@@ -34,7 +168,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 0 10%;
+  padding: 5% 10%;
   .text {
     font-family: honey; /*avenir-regular*/
     font-size: 80px; /*40px*/
@@ -56,3 +190,259 @@
     background-color: $green1;
   }
 }
+.titoloCon {
+  width: 100%;
+  height: 100px;
+  color: $green2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10% 10%;
+  .text {
+    font-family: honey; /*avenir-regular*/
+    font-size: 80px; /*40px*/
+    line-height: 150%;
+    margin: 0 30px;
+  }
+  .separatore {
+    display: flex;
+    justify-content: space-between;
+    .dot {
+      width: 10px;
+      height: 10px;
+      margin-right: 16px;
+    }
+  }
+
+  &.green {
+    color: white;
+    background-color: $green1;
+  }
+}
+.titoloBis {
+  padding-top: 5rem;
+  width: 100%;
+  height: 100px;
+  color: #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 10%;
+  .textBis {
+    font-family: honey; /*avenir-regular*/
+    font-size: 80px; /*40px*/
+    line-height: 150%;
+    margin: 0 30px;
+  }
+  .separatore {
+    display: flex;
+    justify-content: space-between;
+    .dot {
+      width: 10px;
+      height: 10px;
+      margin-right: 16px;
+      background: white;
+    }
+  }
+
+  &.green {
+    color: green;
+    background-color: #ffffff;
+  }
+}
+
+
+.image{
+
+  display: block;
+  top: 5rem;
+  margin-left: 30%;
+  margin-right: 30%;
+  width: 40%;
+  object-fit: contain;
+
+}
+.imageBis{
+
+  width: 800px;
+  height: 800px;
+  display: block;
+  top: 5rem;
+  margin-left: auto;
+  margin-right: 4%;
+  object-fit: contain;
+  width: 55%
+}
+.t2 {
+  width: 800px;
+  height: 400px;
+  font-size: 38px;
+  line-height: 54px;
+  color: #ffffff;
+  padding-left: 9rem;
+  padding-top: 17rem;
+
+}
+.button {
+  padding-top: 3rem;
+  background-color: #255d40;
+  border: none;
+  color: white;
+  padding: 18px 11px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 60px 446px;
+  cursor: pointer;
+  transition-duration: 0.4s;
+
+
+}
+
+.button1 {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+
+.button2:hover {
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+
+@media only screen and (max-width: 1200px) {
+  .grid-container {
+
+    grid-template-columns:repeat(2, minmax(400px, 1fr));
+
+
+  }
+  .t2 {
+    width: 755px;
+    height: 400px;
+    font-size: 24px;
+    line-height: 54px;
+    color: #ffffff;
+    padding-left: 3rem;
+    padding-top: 17rem;
+  }
+}
+@media only screen and (max-width: 1024px) {
+  .titolo{
+    margin-left: 7%;
+  }
+  .grid-container {
+
+    grid-template-columns:repeat(2, minmax(400px, 1fr));
+    padding-left: 9rem;
+
+
+  }
+  .container2 {
+    position: relative;
+    width: 1138px;
+    height: 100%;
+    object-fit: cover;
+    cursor: pointer;
+    background: #255d40;
+    opacity: 0.7;
+  }
+
+  .t2 {
+    width: 664px;
+    height: 388px;
+    font-size: 27px;
+    line-height: 54px;
+    color: #ffffff;
+    padding-left: 3rem;
+    padding-top: 17rem;
+  }
+  .titoloCon{
+    margin:7%;
+  }
+  .image{
+    margin-left: 37%
+
+  }
+  .text-block{
+    margin-left:7%;
+  }
+}
+@media only screen and (max-width: 800px) {
+  .titolo{
+      padding: 0% 0%;
+      margin-left: 20%;
+
+  }
+
+  .titoloCon .text {
+    font-family: honey;
+    font-size: 61px;
+    line-height: 150%;
+    margin: 0 30px;
+  }
+  .grid-container {
+
+    grid-template-columns:repeat(1, minmax(400px, 1fr));
+    padding-left: 18rem;
+    padding-right: 0rem;
+
+  }
+  .container2{
+    width: 1040px;
+  }
+  .container{
+    margin-left: 17%;
+  }
+  .image{
+    margin-left: 30%;
+  }
+  .button{
+    margin: 60px 286px;
+  }
+
+
+}
+@media only screen and (max-width: 380px) {
+  .titolo{
+    width: 233%;
+    padding: 24% 110%;
+    margin-left: 16%;
+    .text{
+      font-size: 72px;
+      line-height: 87%;
+      margin: 11px 53px;
+    }
+  }
+
+
+  .titoloCon {
+    margin: 1%;
+    margin-left: -6%;
+  }
+  .grid-container {
+
+    grid-template-columns:repeat(1, minmax(400px, 1fr));
+    padding-left: 18rem;
+    padding-right: 0rem;
+
+  }
+  .container2{
+    width: 1040px;
+  }
+  .container{
+    width: 258%;
+
+  }
+  .image{
+    margin-left: 26%;
+  }
+  .button{
+    margin: 60px 324px;
+  }
+
+
+
+
+
+}
+
