--- a/src/app/lista-nozze/lista-nozze.component.html
+++ b/src/app/lista-nozze/lista-nozze.component.html
@@ -306,23 +306,24 @@
     </div>
     </div>
 <div class="container">
-  <div class="text-block">
-    <h4>Eccoci finalmente con una mini lista nozze!
+  <div class="descrizione">
+    Eccoci finalmente con una mini lista nozze!
       In questo periodo anche girare per negozi è diventato un pochino complesso.
       Tuttavia se avete piacere di contribuire alla costruzione della nostra nuova casa o a qualche giorno di riposo dopo il matrimonio, potete farlo mandandoci un bonifico. Ricordatevi di indicarci come causale il viaggio o l’articolo della lista che preferite a cui vorreste contribuire, in modo da potervi ringraziare ancora di più!
-    </h4>
-    <h2>
-      Intestatario: Simone Clot
 
-    </h2>
-    <h2>
+    <br>
 
+  <div class="banca">
+
+      <br>
+     Intestatario: Simone Clot
+ <br>
       IBAN: IT20D0320502 000000000 502695
 
-    </h2>
-    <h1>
+    <br>
       Un grazie di cuore!
-    </h1>
+
+  </div>
   </div>
 </div>
 </div>
