--- a/src/app/lista-nozze/lista-nozze.component.scss
+++ b/src/app/lista-nozze/lista-nozze.component.scss
@@ -276,13 +276,15 @@ h2 {
 .t2 {
   width: 800px;
   height: 400px;
+  font-family: avenir-regular;
   font-size: 38px;
   line-height: 54px;
   color: #ffffff;
   padding-left: 9rem;
-  padding-top: 17rem;
+  padding-top: 10rem;
 
 }
+
 .button {
   padding-top: 3rem;
   background-color: #255d40;
@@ -306,6 +308,45 @@ h2 {
 
 .button2:hover {
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24),0 17px 50px 0 rgba(0,0,0,0.19);
+}
+.descrizione {
+  font-family: avenir-regular;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 150%;
+
+  &.bold {
+    font-family: avenir-bold;
+    margin-bottom: 20px;
+  }
+  .t2 {
+    width: 800px;
+    height: auto;
+    font-family: avenir-regular;
+    font-size: 38px;
+    line-height: 54px;
+    color: #ffffff;
+    padding-left: 9rem;
+    padding-top: 10rem;
+
+
+  }
+  .banca {
+    width: 800px;
+    height: auto;
+    font-family: avenir-regular;
+    line-height: 35px;
+    padding-top: 5rem;
+    font-size: 26px;
+    color: #255d40;
+
+
+  }
+
+
+  @media only screen and (max-device-width: 670px) {
+    text-align: center;
+  }
 }
 
 
